# HardCilk

./: .gitignore  .gitmodules  AddressTransformHardcilk.sv  AddressTransformHardcilk.v  README.md  Widen.sv
architecture-generator/software_template/: CMakeLists.txt  simulate.do  synth_qu.do
architecture-generator/software_template/driver/: CMakeLists.txt
architecture-generator/software_template/driver/include/: hardCilkDriver.h  hardCilkDriver.tpp  mFpgaHardCilkDriver.h  main_helper.h  memIO.h  memIO_questa.h  memIO_xrt.h  sc_dpiheader_questa.h
architecture-generator/software_template/driver/src/: hardCilkDriver.cpp
architecture-generator/software_template/projects/project_template/: CMakeLists.txt  protocols.py
openCilkSoftware/triangle/: CMakeLists.txt  triangle.cpp
simulation-models/sysc-switch-main/: .gitignore  CMakeLists.txt  LICENSE  README.md  bla.cpp  protocols.py
simulation-models/sysc-switch-main/include/sysc_netw/: Arbiter.hpp  Connect.hpp  Consumer.hpp  Crossbar.hpp  Generator.hpp  Link.hpp  MfpgaSwitch.hpp  Packet.hpp  sysc_netw.hpp
simulation-models/sysc-switch-main/include/sysc_netw/util/: reference_counted.hpp
simulation-models/sysc-switch-main/rtl/: NetworkNode.hdlinfo.json  NetworkNode.sv  build.sbt
simulation-models/sysc-switch-main/rtl/src/main/scala/sysc_switch/: Node.scala
simulation-models/sysc-switch-main/src/: main.cpp
software/: CMakeLists.txt  graph_r.h
software/bfs/include/: bfsDriver.h  graph.h  test_bench_questa.h
software/bfs/src/: pcie_main.cpp  systemc_main.cpp
software/dae/include/: daeDriver.h  test_bench_questa.h
software/dae/src/: pcie_main.cpp  systemc_main.cpp
software/driver/include/: hardCilkDriver.tpp  tlmMemory.h
software/driver/src/: hardCilkDriver.cpp
software/examples/fib/: CMakeLists.txt  sctlm-config.cmake.in  svm
software/examples/fib/hdl/: fibonacci.hdlinfo.json  fibonacci.sv  fibonacci_descriptor_2.json
software/examples/fib/include/: FullSysGenDescriptor.h  fibonacciDriver.h  hardCilkDriver.h  hardCilkDriver.tpp  memIO.h  memIO_pcie.h  testBench.h
software/examples/fib/src/: hardCilkDriver.cpp  systemc_main.cpp
software/fibonacci/include/: fibonacciDriver.h  test_bench_questa.h
software/fibonacci/src/: pcie_main.cpp  xrt_main.cpp
software/graph_dae/include/: graphDaeDriver.h  test_bench_questa.h
software/graph_dae/src/: pcie_main.cpp
software/graph_no_dae/include/: graphNoDaeDriver.h  test_bench_questa.h
software/graph_no_dae/src/: pcie_main.cpp
software/include/: FullSysGenDescriptor.h  hardCilkDriver.h  hardCilkDriver.tpp  qsort.h
software/mfpga/fibonacci/include/: fibonacciDriver.h
software/mfpga/fibonacci/src/: xrt_main.cpp
software/mfpga/graphRandomWalk/include/: graph.h  graphRandomWalkDriver.h
software/mfpga/graphRandomWalk/src/: pcie_main.cpp  questa_main.cpp  systemc_main.cpp  xrt_main.cpp
software/mfpga/pageRank/include/: pageRankDriver.h
software/mfpga/pageRank/src/: xrt_main.cpp
software/mfpga/triangleCount/include/: graph.h  triangleCountDriver.h
software/mfpga/triangleCount/src/: xrt_main.cpp
software/numQueens/: run.sh
software/numQueens/include/: numQueensDriver.h
software/numQueens/src/: pcie_main.cpp  systemc_main.cpp
software/pageRank/include/: pageRankDriver.h
software/pageRankRTL_memOpt/include/: graph.h  pageRankDriver.h  test_bench_questa.h
software/pageRankRTL_memOpt/src/: pcie_main.cpp  systemc_main.cpp
software/pageRankRTL_noMemOpt/include/: pageRankDriver.h
software/paper_exp1/include/: paper_exp1Driver.h
software/paper_exp1/src/: pcie_main.cpp  systemc_main.cpp
software/paper_exp1_singleFPGA_software/include/: Protocols.hpp  paper_exp1Driver.h  test_bench_questa.h
software/paper_exp1_singleFPGA_software/src/: pcie_main.cpp  systemc_main.cpp
software/paper_exp2/include/: paper_exp2Driver.h
software/paper_exp2/src/: systemc_main.cpp
software/paper_exp3/include/: paper_exp3Driver.h
software/paper_exp3/src/: systemc_main.cpp
software/projects/: CMakeLists.txt
software/projects/fibonacci/: CMakeLists.txt
software/projects/fibonacci/hdl/: fib_hls_deadlock_idx0_monitor.v  fib_hls_deadlock_kernel_monitor_top.vh  fib_regslice_both.v  fibonacci.hdlinfo.json  fibonacci.v  fibonacci_descriptor_2.json  sum.v  sum_regslice_both.v
software/projects/fibonacci/include/: FullSysGenDescriptor.h  fibonacciDriver.h  testBench.h
software/projects/fibonacci/src/: pcie_main.cpp  systemc_main.cpp
software/projects/quickSort/: CMakeLists.txt
software/projects/quickSort/hdl/: qsort.v  qsort_compute.v  qsort_control_s_axi.v  qsort_fifo_w128_d3_S.v  qsort_fifo_w256_d3_S.v  qsort_fifo_w256_d6_A.v  qsort_fifo_w64_d3_S.v  qsort_flow_control_loop_pipe_sequential_init.v  qsort_hls_deadlock_idx0_monitor.v  qsort_hls_deadlock_kernel_monitor_top.vh  qsort_qsort_Pipeline_VITIS_LOOP_118_1.v  qsort_qsort_Pipeline_VITIS_LOOP_86_1.v  qsort_read_task.v  qsort_writeMem.v  qsort_writeMem_Pipeline_VITIS_LOOP_99_1.v  quickSort.hdlinfo.json  quickSort.v  quickSort_descriptor_2.json  sync.v
software/projects/quickSort/include/: FullSysGenDescriptor.h  quickSortDriver.h  testBench.h
software/projects/quickSort/src/: pcie_main.cpp  systemc_main.cpp
software/quickSort/include/: quickSortDriver.h
software/quickSort/src/: pcie_main.cpp  systemc_main.cpp
software/src/: hardCilkDriver.cpp  main.cpp  qsort.cpp
software/triangleCount/include/: graph.h  test_bench_questa.h  triangleCountDriver.h
software/triangleCountRTL_MemOpt/include/: graph.h  triangleCountDriver.h
software/triangleCountRTL_MemOpt/src/: pcie_main.cpp
software/triangleCountRTL_noMemOpt/include/: triangleCountDriver.h
software/triangleCountRTL_noMemOpt/src/: systemc_main.cpp
xrt-projects/graphRandomWalk/src/host/software/driver/: CMakeLists.txt
xrt-projects/graphRandomWalk/src/host/software/driver/include/: hardCilkDriver.h  pcieMemory.h
xrt-projects/graphRandomWalk/src/host/software/projects/graphRandomWalk/: CMakeLists.txt
xrt-projects/graphRandomWalk/src/host/software/projects/graphRandomWalk/include/: FullSysGenDescriptor.h
(+1036 files in other folders)
